cmake_minimum_required(VERSION 3.5)
project(src)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        utils/bncsutil/src/bncsutil/bncsutil.h
        utils/bncsutil/src/bncsutil/bsha1.cpp
        utils/bncsutil/src/bncsutil/bsha1.h
        utils/bncsutil/src/bncsutil/buffer.h
        utils/bncsutil/src/bncsutil/cdkeydecoder.cpp
        utils/bncsutil/src/bncsutil/cdkeydecoder.h
        utils/bncsutil/src/bncsutil/checkrevision.cpp
        utils/bncsutil/src/bncsutil/checkrevision.h
        utils/bncsutil/src/bncsutil/debug.c
        utils/bncsutil/src/bncsutil/debug.h
        utils/bncsutil/src/bncsutil/decodekey.cpp
        utils/bncsutil/src/bncsutil/decodekey.h
        utils/bncsutil/src/bncsutil/file.cpp
        utils/bncsutil/src/bncsutil/file.h
        utils/bncsutil/src/bncsutil/gmp.h
        utils/bncsutil/src/bncsutil/keytables.h
        utils/bncsutil/src/bncsutil/libinfo.cpp
        utils/bncsutil/src/bncsutil/libinfo.h
        utils/bncsutil/src/bncsutil/ms_stdint.h
        utils/bncsutil/src/bncsutil/mutil.h
        utils/bncsutil/src/bncsutil/mutil_types.h
        utils/bncsutil/src/bncsutil/nls.c
        utils/bncsutil/src/bncsutil/nls.h
        utils/bncsutil/src/bncsutil/oldauth.cpp
        utils/bncsutil/src/bncsutil/oldauth.h
        utils/bncsutil/src/bncsutil/pe.c
        utils/bncsutil/src/bncsutil/pe.h
        utils/bncsutil/src/bncsutil/sha1.c
        utils/bncsutil/src/bncsutil/sha1.h
        utils/bncsutil/src/bncsutil/stack.c
        utils/bncsutil/src/bncsutil/stack.h
        database/mysql/include/mysql/mysql/plugin.h
        database/mysql/include/mysql/config-win.h
        database/mysql/include/mysql/decimal.h
        database/mysql/include/mysql/errmsg.h
        database/mysql/include/mysql/keycache.h
        database/mysql/include/mysql/m_ctype.h
        database/mysql/include/mysql/m_string.h
        database/mysql/include/mysql/my_alloc.h
        database/mysql/include/mysql/my_attribute.h
        database/mysql/include/mysql/my_dbug.h
        database/mysql/include/mysql/my_dir.h
        database/mysql/include/mysql/my_getopt.h
        database/mysql/include/mysql/my_global.h
        database/mysql/include/mysql/my_list.h
        database/mysql/include/mysql/my_net.h
        database/mysql/include/mysql/my_no_pthread.h
        database/mysql/include/mysql/my_pthread.h
        database/mysql/include/mysql/my_sys.h
        database/mysql/include/mysql/my_xml.h
        database/mysql/include/mysql/mysql.h
        database/mysql/include/mysql/mysql_com.h
        database/mysql/include/mysql/mysql_embed.h
        database/mysql/include/mysql/mysql_time.h
        database/mysql/include/mysql/mysql_version.h
        database/mysql/include/mysql/mysqld_ername.h
        database/mysql/include/mysql/mysqld_error.h
        database/mysql/include/mysql/sql_common.h
        database/mysql/include/mysql/sql_state.h
        database/mysql/include/mysql/sslopt-case.h
        database/mysql/include/mysql/sslopt-longopts.h
        database/mysql/include/mysql/sslopt-vars.h
        database/mysql/include/mysql/typelib.h
        utils/StormLib/stormdll/StormDll.cpp
        utils/StormLib/stormdll/StormDll.def
        utils/StormLib/stormdll/StormDll.h
        utils/StormLib/stormlib/bzip2/blocksort.c
        utils/StormLib/stormlib/bzip2/bz-common.xsl
        utils/StormLib/stormlib/bzip2/bz-fo.xsl
        utils/StormLib/stormlib/bzip2/bz-html.xsl
        utils/StormLib/stormlib/bzip2/bzdiff
        utils/StormLib/stormlib/bzip2/bzdiff.1
        utils/StormLib/stormlib/bzip2/bzgrep
        utils/StormLib/stormlib/bzip2/bzgrep.1
        utils/StormLib/stormlib/bzip2/bzip.css
        utils/StormLib/stormlib/bzip2/bzip2.1
        utils/StormLib/stormlib/bzip2/bzip2.1.preformatted
        utils/StormLib/stormlib/bzip2/bzip2.c
        utils/StormLib/stormlib/bzip2/bzip2.txt
        utils/StormLib/stormlib/bzip2/bzip2recover.c
        utils/StormLib/stormlib/bzip2/bzlib.c
        utils/StormLib/stormlib/bzip2/bzlib.h
        utils/StormLib/stormlib/bzip2/bzlib_private.h
        utils/StormLib/stormlib/bzip2/bzmore
        utils/StormLib/stormlib/bzip2/bzmore.1
        utils/StormLib/stormlib/bzip2/CHANGES
        utils/StormLib/stormlib/bzip2/compress.c
        utils/StormLib/stormlib/bzip2/crctable.c
        utils/StormLib/stormlib/bzip2/decompress.c
        utils/StormLib/stormlib/bzip2/dlltest.c
        utils/StormLib/stormlib/bzip2/dlltest.dsp
        utils/StormLib/stormlib/bzip2/entities.xml
        utils/StormLib/stormlib/bzip2/format.pl
        utils/StormLib/stormlib/bzip2/huffman.c
        utils/StormLib/stormlib/bzip2/libbz2.def
        utils/StormLib/stormlib/bzip2/libbz2.dsp
        utils/StormLib/stormlib/bzip2/LICENSE
        utils/StormLib/stormlib/bzip2/Makefile
        utils/StormLib/stormlib/bzip2/Makefile-libbz2_so
        utils/StormLib/stormlib/bzip2/makefile.msc
        utils/StormLib/stormlib/bzip2/manual.html
        utils/StormLib/stormlib/bzip2/manual.pdf
        utils/StormLib/stormlib/bzip2/manual.ps
        utils/StormLib/stormlib/bzip2/manual.xml
        utils/StormLib/stormlib/bzip2/mk251.c
        utils/StormLib/stormlib/bzip2/randtable.c
        utils/StormLib/stormlib/bzip2/README
        utils/StormLib/stormlib/bzip2/README.COMPILATION.PROBLEMS
        utils/StormLib/stormlib/bzip2/README.XML.STUFF
        utils/StormLib/stormlib/bzip2/sample1.bz2
        utils/StormLib/stormlib/bzip2/sample1.ref
        utils/StormLib/stormlib/bzip2/sample2.bz2
        utils/StormLib/stormlib/bzip2/sample2.ref
        utils/StormLib/stormlib/bzip2/sample3.bz2
        utils/StormLib/stormlib/bzip2/sample3.ref
        utils/StormLib/stormlib/bzip2/spewG.c
        utils/StormLib/stormlib/bzip2/unzcrash.c
        utils/StormLib/stormlib/bzip2/words0
        utils/StormLib/stormlib/bzip2/words1
        utils/StormLib/stormlib/bzip2/words2
        utils/StormLib/stormlib/bzip2/words3
        utils/StormLib/stormlib/bzip2/xmlproc.sh
        utils/StormLib/stormlib/bzip2/Y2K_INFO
        utils/StormLib/stormlib/huffman/huff.cpp
        utils/StormLib/stormlib/huffman/huff.h
        utils/StormLib/stormlib/misc/crc32.cpp
        utils/StormLib/stormlib/misc/crc32.h
        utils/StormLib/stormlib/misc/md5.cpp
        utils/StormLib/stormlib/misc/md5.h
        utils/StormLib/stormlib/pklib/crc32.c
        utils/StormLib/stormlib/pklib/explode.c
        utils/StormLib/stormlib/pklib/implode.c
        utils/StormLib/stormlib/pklib/pklib.h
        utils/StormLib/stormlib/wave/wave.cpp
        utils/StormLib/stormlib/wave/wave.h
        utils/StormLib/stormlib/zlib/amiga/Makefile.pup
        utils/StormLib/stormlib/zlib/amiga/Makefile.sas
        utils/StormLib/stormlib/zlib/as400/bndsrc
        utils/StormLib/stormlib/zlib/as400/compile.clp
        utils/StormLib/stormlib/zlib/as400/readme.txt
        utils/StormLib/stormlib/zlib/as400/zlib.inc
        utils/StormLib/stormlib/zlib/contrib/ada/buffer_demo.adb
        utils/StormLib/stormlib/zlib/contrib/ada/mtest.adb
        utils/StormLib/stormlib/zlib/contrib/ada/read.adb
        utils/StormLib/stormlib/zlib/contrib/ada/readme.txt
        utils/StormLib/stormlib/zlib/contrib/ada/test.adb
        utils/StormLib/stormlib/zlib/contrib/ada/zlib-streams.adb
        utils/StormLib/stormlib/zlib/contrib/ada/zlib-streams.ads
        utils/StormLib/stormlib/zlib/contrib/ada/zlib-thin.adb
        utils/StormLib/stormlib/zlib/contrib/ada/zlib-thin.ads
        utils/StormLib/stormlib/zlib/contrib/ada/zlib.adb
        utils/StormLib/stormlib/zlib/contrib/ada/zlib.ads
        utils/StormLib/stormlib/zlib/contrib/ada/zlib.gpr
        utils/StormLib/stormlib/zlib/contrib/asm586/match.S
        utils/StormLib/stormlib/zlib/contrib/asm586/README.586
        utils/StormLib/stormlib/zlib/contrib/asm686/match.S
        utils/StormLib/stormlib/zlib/contrib/asm686/README.686
        utils/StormLib/stormlib/zlib/contrib/blast/blast.c
        utils/StormLib/stormlib/zlib/contrib/blast/blast.h
        utils/StormLib/stormlib/zlib/contrib/blast/Makefile
        utils/StormLib/stormlib/zlib/contrib/blast/README
        utils/StormLib/stormlib/zlib/contrib/blast/test.pk
        utils/StormLib/stormlib/zlib/contrib/blast/test.txt
        utils/StormLib/stormlib/zlib/contrib/delphi/readme.txt
        utils/StormLib/stormlib/zlib/contrib/delphi/ZLib.pas
        utils/StormLib/stormlib/zlib/contrib/delphi/ZLibConst.pas
        utils/StormLib/stormlib/zlib/contrib/delphi/zlibd32.mak
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/AssemblyInfo.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/ChecksumImpl.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/CircularBuffer.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/CodecBase.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/Deflater.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/DotZLib.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/DotZLib.csproj
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/GZipStream.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/Inflater.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib/UnitTests.cs
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib.build
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib.chm
        utils/StormLib/stormlib/zlib/contrib/dotzlib/DotZLib.sln
        utils/StormLib/stormlib/zlib/contrib/dotzlib/LICENSE_1_0.txt
        utils/StormLib/stormlib/zlib/contrib/dotzlib/readme.txt
        utils/StormLib/stormlib/zlib/contrib/infback9/infback9.c
        utils/StormLib/stormlib/zlib/contrib/infback9/infback9.h
        utils/StormLib/stormlib/zlib/contrib/infback9/inffix9.h
        utils/StormLib/stormlib/zlib/contrib/infback9/inflate9.h
        utils/StormLib/stormlib/zlib/contrib/infback9/inftree9.c
        utils/StormLib/stormlib/zlib/contrib/infback9/inftree9.h
        utils/StormLib/stormlib/zlib/contrib/infback9/README
        utils/StormLib/stormlib/zlib/contrib/inflate86/inffas86.c
        utils/StormLib/stormlib/zlib/contrib/inflate86/inffast.S
        utils/StormLib/stormlib/zlib/contrib/iostream/test.cpp
        utils/StormLib/stormlib/zlib/contrib/iostream/zfstream.cpp
        utils/StormLib/stormlib/zlib/contrib/iostream/zfstream.h
        utils/StormLib/stormlib/zlib/contrib/iostream2/zstream.h
        utils/StormLib/stormlib/zlib/contrib/iostream2/zstream_test.cpp
        utils/StormLib/stormlib/zlib/contrib/iostream3/README
        utils/StormLib/stormlib/zlib/contrib/iostream3/test.cc
        utils/StormLib/stormlib/zlib/contrib/iostream3/TODO
        utils/StormLib/stormlib/zlib/contrib/iostream3/zfstream.cc
        utils/StormLib/stormlib/zlib/contrib/iostream3/zfstream.h
        utils/StormLib/stormlib/zlib/contrib/masm686/match.asm
        utils/StormLib/stormlib/zlib/contrib/masmx64/bld_ml64.bat
        utils/StormLib/stormlib/zlib/contrib/masmx64/gvmat64.asm
        utils/StormLib/stormlib/zlib/contrib/masmx64/inffas8664.c
        utils/StormLib/stormlib/zlib/contrib/masmx64/inffasx64.asm
        utils/StormLib/stormlib/zlib/contrib/masmx64/readme.txt
        utils/StormLib/stormlib/zlib/contrib/masmx86/bld_ml32.bat
        utils/StormLib/stormlib/zlib/contrib/masmx86/gvmat32.asm
        utils/StormLib/stormlib/zlib/contrib/masmx86/gvmat32c.c
        utils/StormLib/stormlib/zlib/contrib/masmx86/inffas32.asm
        utils/StormLib/stormlib/zlib/contrib/masmx86/mkasm.bat
        utils/StormLib/stormlib/zlib/contrib/masmx86/readme.txt
        utils/StormLib/stormlib/zlib/contrib/minizip/ChangeLogUnzip
        utils/StormLib/stormlib/zlib/contrib/minizip/crypt.h
        utils/StormLib/stormlib/zlib/contrib/minizip/ioapi.c
        utils/StormLib/stormlib/zlib/contrib/minizip/ioapi.h
        utils/StormLib/stormlib/zlib/contrib/minizip/iowin32.c
        utils/StormLib/stormlib/zlib/contrib/minizip/iowin32.h
        utils/StormLib/stormlib/zlib/contrib/minizip/Makefile
        utils/StormLib/stormlib/zlib/contrib/minizip/miniunz.c
        utils/StormLib/stormlib/zlib/contrib/minizip/minizip.c
        utils/StormLib/stormlib/zlib/contrib/minizip/mztools.c
        utils/StormLib/stormlib/zlib/contrib/minizip/mztools.h
        utils/StormLib/stormlib/zlib/contrib/minizip/unzip.c
        utils/StormLib/stormlib/zlib/contrib/minizip/unzip.h
        utils/StormLib/stormlib/zlib/contrib/minizip/zip.c
        utils/StormLib/stormlib/zlib/contrib/minizip/zip.h
        utils/StormLib/stormlib/zlib/contrib/pascal/example.pas
        utils/StormLib/stormlib/zlib/contrib/pascal/readme.txt
        utils/StormLib/stormlib/zlib/contrib/pascal/zlibd32.mak
        utils/StormLib/stormlib/zlib/contrib/pascal/zlibpas.pas
        utils/StormLib/stormlib/zlib/contrib/puff/Makefile
        utils/StormLib/stormlib/zlib/contrib/puff/puff.c
        utils/StormLib/stormlib/zlib/contrib/puff/puff.h
        utils/StormLib/stormlib/zlib/contrib/puff/README
        utils/StormLib/stormlib/zlib/contrib/puff/zeros.raw
        utils/StormLib/stormlib/zlib/contrib/testzlib/testzlib.c
        utils/StormLib/stormlib/zlib/contrib/testzlib/testzlib.txt
        utils/StormLib/stormlib/zlib/contrib/untgz/Makefile
        utils/StormLib/stormlib/zlib/contrib/untgz/Makefile.msc
        utils/StormLib/stormlib/zlib/contrib/untgz/untgz.c
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc7/miniunz.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc7/minizip.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc7/testzlib.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc7/zlib.rc
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc7/zlibstat.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc7/zlibvc.def
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc7/zlibvc.sln
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc7/zlibvc.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/miniunz.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/minizip.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/testzlib.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/testzlibdll.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/zlib.rc
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/zlibstat.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/zlibvc.def
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/zlibvc.sln
        utils/StormLib/stormlib/zlib/contrib/vstudio/vc8/zlibvc.vcproj
        utils/StormLib/stormlib/zlib/contrib/vstudio/readme.txt
        utils/StormLib/stormlib/zlib/contrib/README.contrib
        utils/StormLib/stormlib/zlib/examples/fitblk.c
        utils/StormLib/stormlib/zlib/examples/gun.c
        utils/StormLib/stormlib/zlib/examples/gzappend.c
        utils/StormLib/stormlib/zlib/examples/gzjoin.c
        utils/StormLib/stormlib/zlib/examples/gzlog.c
        utils/StormLib/stormlib/zlib/examples/gzlog.h
        utils/StormLib/stormlib/zlib/examples/README.examples
        utils/StormLib/stormlib/zlib/examples/zlib_how.html
        utils/StormLib/stormlib/zlib/examples/zpipe.c
        utils/StormLib/stormlib/zlib/examples/zran.c
        utils/StormLib/stormlib/zlib/msdos/Makefile.bor
        utils/StormLib/stormlib/zlib/msdos/Makefile.dj2
        utils/StormLib/stormlib/zlib/msdos/Makefile.emx
        utils/StormLib/stormlib/zlib/msdos/Makefile.msc
        utils/StormLib/stormlib/zlib/msdos/Makefile.tc
        utils/StormLib/stormlib/zlib/old/os2/Makefile.os2
        utils/StormLib/stormlib/zlib/old/os2/zlib.def
        utils/StormLib/stormlib/zlib/old/descrip.mms
        utils/StormLib/stormlib/zlib/old/Makefile.riscos
        utils/StormLib/stormlib/zlib/old/README
        utils/StormLib/stormlib/zlib/old/visual-basic.txt
        utils/StormLib/stormlib/zlib/old/zlib.html
        utils/StormLib/stormlib/zlib/projects/visualc6/example.dsp
        utils/StormLib/stormlib/zlib/projects/visualc6/minigzip.dsp
        utils/StormLib/stormlib/zlib/projects/visualc6/README.txt
        utils/StormLib/stormlib/zlib/projects/visualc6/zlib.dsp
        utils/StormLib/stormlib/zlib/projects/visualc6/zlib.dsw
        utils/StormLib/stormlib/zlib/projects/README.projects
        utils/StormLib/stormlib/zlib/qnx/package.qpg
        utils/StormLib/stormlib/zlib/win32/DLL_FAQ.txt
        utils/StormLib/stormlib/zlib/win32/Makefile.bor
        utils/StormLib/stormlib/zlib/win32/Makefile.emx
        utils/StormLib/stormlib/zlib/win32/Makefile.gcc
        utils/StormLib/stormlib/zlib/win32/Makefile.msc
        utils/StormLib/stormlib/zlib/win32/VisualC.txt
        utils/StormLib/stormlib/zlib/win32/zlib.def
        utils/StormLib/stormlib/zlib/win32/zlib1.rc
        utils/StormLib/stormlib/zlib/adler32.c
        utils/StormLib/stormlib/zlib/algorithm.txt
        utils/StormLib/stormlib/zlib/ChangeLog
        utils/StormLib/stormlib/zlib/compress.c
        utils/StormLib/stormlib/zlib/configure
        utils/StormLib/stormlib/zlib/crc32.c
        utils/StormLib/stormlib/zlib/crc32.h
        utils/StormLib/stormlib/zlib/deflate.c
        utils/StormLib/stormlib/zlib/deflate.h
        utils/StormLib/stormlib/zlib/example.c
        utils/StormLib/stormlib/zlib/FAQ
        utils/StormLib/stormlib/zlib/gzio.c
        utils/StormLib/stormlib/zlib/INDEX
        utils/StormLib/stormlib/zlib/infback.c
        utils/StormLib/stormlib/zlib/inffast.c
        utils/StormLib/stormlib/zlib/inffast.h
        utils/StormLib/stormlib/zlib/inffixed.h
        utils/StormLib/stormlib/zlib/inflate.c
        utils/StormLib/stormlib/zlib/inflate.h
        utils/StormLib/stormlib/zlib/inftrees.c
        utils/StormLib/stormlib/zlib/inftrees.h
        utils/StormLib/stormlib/zlib/Makefile
        utils/StormLib/stormlib/zlib/Makefile.in
        utils/StormLib/stormlib/zlib/minigzip.c
        utils/StormLib/stormlib/zlib/README
        utils/StormLib/stormlib/zlib/trees.c
        utils/StormLib/stormlib/zlib/trees.h
        utils/StormLib/stormlib/zlib/uncompr.c
        utils/StormLib/stormlib/zlib/zconf.h
        utils/StormLib/stormlib/zlib/zconf.in.h
        utils/StormLib/stormlib/zlib/zlib.3
        utils/StormLib/stormlib/zlib/zlib.h
        utils/StormLib/stormlib/zlib/zutil.c
        utils/StormLib/stormlib/zlib/zutil.h
        utils/StormLib/stormlib/GfxDecode.cpp
        utils/StormLib/stormlib/Makefile
        utils/StormLib/stormlib/SAttrFile.cpp
        utils/StormLib/stormlib/SCommon.cpp
        utils/StormLib/stormlib/SCommon.h
        utils/StormLib/stormlib/SCompression.cpp
        utils/StormLib/stormlib/SCompression_new.cpp
        utils/StormLib/stormlib/SCompression_old.cpp
        utils/StormLib/stormlib/SFileCompactArchive.cpp
        utils/StormLib/stormlib/SFileCreateArchiveEx.cpp
        utils/StormLib/stormlib/SFileExtractFile.cpp
        utils/StormLib/stormlib/SFileFindFile.cpp
        utils/StormLib/stormlib/SFileOpenArchive.cpp
        utils/StormLib/stormlib/SFileOpenFileEx.cpp
        utils/StormLib/stormlib/SFileReadFile.cpp
        utils/StormLib/stormlib/SListFile.cpp
        utils/StormLib/stormlib/StormDll.h
        utils/StormLib/stormlib/StormLib.h
        utils/StormLib/stormlib/StormPort.h
        utils/StormLib/stormlib/StormPortLinux.cpp
        utils/StormLib/stormlib/StormPortMac.cpp
        utils/StormLib/stormlibdll/DllMain.c
        utils/StormLib/stormlibdll/StormLib.def
        utils/StormLib/test/Test.cpp
        utils/bncsutilinterface.cpp
        utils/bncsutilinterface.h
        bnet/bnet.cpp
        bnet/bnet.h
        bnet/bnetprotocol.cpp
        bnet/bnetprotocol.h
        bnls/bnlsclient.cpp
        bnls/bnlsclient.h
        bnls/bnlsprotocol.cpp
        bnls/bnlsprotocol.h
        network/commandpacket.cpp
        network/commandpacket.h
    config.cpp
    config.h
        utils/crc32.cpp
        utils/crc32.h
        utils/csvparser.cpp
        utils/csvparser.h
        game/game.cpp
        game/game.h
        game/game_base.cpp
        game/game_base.h
        game/gameplayer.cpp
        game/gameplayer.h
        game/gameprotocol.cpp
        game/gameprotocol.h
        game/gameslot.cpp
        game/gameslot.h
        garena/gcbiprotocol.cpp
        garena/gcbiprotocol.h
        database/ghostdb.cpp
        database/ghostdb.h
        database/ghostdbmysql.cpp
        database/ghostdbmysql.h
        gproxy/gpsprotocol.cpp
        gproxy/gpsprotocol.h
        includes.h
    language.cpp
    language.h
    Makefile
    map.cpp
    map.h
        utils/ms_stdint.h
        utils/next_combination.h
    ohbot.cpp
    ohbot.h
        utils/packed.cpp
        utils/packed.h
    replay.cpp
    replay.h
    savegame.cpp
    savegame.h
        utils/sha1.cpp
        utils/sha1.h
        network/socket.cpp
        network/socket.h
        stats/stats.cpp
        stats/stats.h
        stats/statsdota.cpp
        stats/statsdota.h
        stats/statsw3mmd.cpp
        stats/statsw3mmd.h
        utils/util.cpp
        utils/util.h
    w3g_actions.txt
    w3g_format.txt command.h command.cpp network/utils.h network/utils.cpp)

add_executable(src ${SOURCE_FILES})